test/echo/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: registry.k8s.io/echoserver:1.4
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 0
            memory: 0Mi
          limits:
            cpu: 100m
            memory: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
