test/echo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  # annotations:
  #   nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,1.2.3.4
spec:
  ingressClassName: nginx
  tls:
  - secretName: main-wildcard-at-duckdns
  rules:
  - host: echo.example.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
